# GTKCssLanguageServer

./: COPYING  PROGRESS.md  README.md  meson.build
.github/workflows/: CI.yml
parser/: README.md  meson.build  parser.c
parser/src/: parser.c
src/: colors.json  docs.json  functions.json  gtkcsslangserver.vala  ids.c.in  load.c  main.vala  meson.build  parsecontext.vala  properties.json  protocol.vala  selectors.json  util.vala
src/ast/: ast.vala  astvisitor.vala  dataextractor.vala
vapi/: ts.vapi
